--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,12 +34,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/AlmacenAlpha
 excludes=
 file.reference.AbsoluteLayout.jar=C:\\Users\\Usuario\\Desktop\\AbsoluteLayout.jar
+file.reference.AbsoluteLayout.jar-1=AbsoluteLayout.jar
 file.reference.mssql-jdbc-12.2.0.jre11.jar=mssql-jdbc-12.2.0.jre11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mssql-jdbc-12.2.0.jre11.jar}:\
-    ${file.reference.AbsoluteLayout.jar}
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.AbsoluteLayout.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
