--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,15 @@ dist.jlink.output=${dist.jlink.dir}/AlmacenAlpha
 excludes=
 file.reference.AbsoluteLayout.jar=C:\\Users\\Usuario\\Desktop\\AbsoluteLayout.jar
 file.reference.AbsoluteLayout.jar-1=AbsoluteLayout.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\acost\\Downloads\\jcalendar-1.4.jar
 file.reference.mssql-jdbc-12.2.0.jre11.jar=mssql-jdbc-12.2.0.jre11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mssql-jdbc-12.2.0.jre11.jar}:\
     ${file.reference.AbsoluteLayout.jar}:\
-    ${file.reference.AbsoluteLayout.jar-1}
+    ${file.reference.AbsoluteLayout.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
