--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ excludes=
 file.reference.AbsoluteLayout.jar=C:\\Users\\Usuario\\Desktop\\AbsoluteLayout.jar
 file.reference.AbsoluteLayout.jar-1=AbsoluteLayout.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\acost\\Downloads\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=jcalendar-1.4.jar
 file.reference.mssql-jdbc-12.2.0.jre11.jar=mssql-jdbc-12.2.0.jre11.jar
 includes=**
 jar.compress=false
@@ -43,7 +44,8 @@ javac.classpath=\
     ${file.reference.mssql-jdbc-12.2.0.jre11.jar}:\
     ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.AbsoluteLayout.jar-1}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
